# IGH_CiA402_Code

./: CMakeLists.txt  Makefile  README.md  main.c  main.h
include/: igh_coe_motor.h  test.h
src/: igh_coe_motor.c  main_demo.c  test.c
